--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -21,7 +21,7 @@
             {% endif %}
             <ul class="list-inline item-details">
               {% if post.title %}
-              <li>Client:
+              <li>Title:
                 <strong>{{ post.title }}</strong>
               </li>
               {% endif %}
