--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -15,7 +15,14 @@
           <div class="modal-body">
             <h2>{{ post.title }}</h2>
             <hr class="star-primary">
-            <img src="img/portDetail/{{ post.img }}" class="img-responsive img-centered" alt="{{ post.alt }}">
+            {% if post.videos %}
+            <video muted autoplay loop>
+              <source width="900" height="650" src="vid/{{ post.img }}.mp4" class="img-centered img-responsive" type="video/mp4">
+              <strong>Your browser does not support the video tag.</strong>
+            </video>
+            {% else %}
+            <img src="img/portDetail/{{ post.img }}.png" class="img-responsive img-centered" alt="{{ post.alt }}">
+            {% endif %}
             {% if post.description %}
             <p>{{ post.description }}</p>
             {% endif %}
