--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -24,6 +24,7 @@
             <img src="img/portDetail/{{ post.img }}.png" class="img-responsive img-centered" alt="{{ post.alt }}">
             {% endif %}
             {% if post.description %}
+            <h4>느낀점</h4>
             <p>{{ post.description }}</p>
             {% endif %}
             <ul class="list-inline item-details">
@@ -39,7 +40,7 @@
               {% endif %}
               {% if post.client %}
               <li>Client:
-                <strong>{{ post.Client }}</strong>
+                <strong>{{ post.client }}</strong>
               </li>
               {% endif %}
             </ul>
