--- a/_includes/contact_static.html
+++ b/_includes/contact_static.html
@@ -12,7 +12,7 @@
         <form action="//formspree.io/{{ site.email }}" method="POST" name="sentMessage" id="contactForm" novalidate>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="name">Name</label>
+              <label for="name">회사명 및 이름</label>
               <input type="text" name="name" class="form-control" placeholder="Name" id="name" required
                 data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
@@ -20,7 +20,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="email">Email Address</label>
+              <label for="email">Email 주소</label>
               <input type="email" name="_replyto" class="form-control" placeholder="Email Address" id="email" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
@@ -42,7 +42,7 @@
           <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-success btn-lg">Send</button>
+              <button type="submit" class="btn btn-success btn-lg">메일 보내기</button>
             </div>
           </div>
         </form>
