--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,10 +4,10 @@
     <div class="container">
       <div class="row">
         <div class="footer-col col-md-4">
-          <h3>{{ site.footer.location }}</h3>
+          <h3>{{ site.footer.number }}</h3>
           <p>
-            {% for adress in site.address %}
-            {{ adress.line }} <br>
+            {% for number in site.number %}
+            {{ number.line }} <br>
             {% endfor %}
           </p>
         </div>
@@ -23,8 +23,8 @@
           </ul>
         </div>
         <div class="footer-col col-md-4">
-          <h3>{{ site.footer.credits }}</h3>
-          <p>{{ site.credits }}</p>
+          <h3>{{ site.footer.contact }}</h3>
+          <p>{{ site.contact }}</p>
         </div>
       </div>
     </div>
