--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,7 +24,7 @@
         </div>
         <div class="footer-col col-md-4">
           <h3>{{ site.footer.contact }}</h3>
-          <p>{{ site.contact }}</p>
+          <p>{{ site.contacts }}</p>
         </div>
       </div>
     </div>
