--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -14,7 +14,7 @@
         <form name="sentMessage" id="contactForm" novalidate>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="name">Name</label>
+              <label for="name">회사명 or 이름</label>
               <input type="text" class="form-control" placeholder="Name" id="name" required
                 data-validation-required-message="Please enter your name.">
               <p class="help-block text-danger"></p>
@@ -22,7 +22,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="email">Email Address</label>
+              <label for="email">Email 주소</label>
               <input type="email" class="form-control" placeholder="Email Address" id="email" required
                 data-validation-required-message="Please enter your email address.">
               <p class="help-block text-danger"></p>
@@ -30,7 +30,7 @@
           </div>
           <div class="row control-group">
             <div class="form-group col-xs-12 floating-label-form-group controls">
-              <label for="phone">Phone Number</label>
+              <label for="phone">연락받을 번호</label>
               <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required
                 data-validation-required-message="Please enter your phone number.">
               <p class="help-block text-danger"></p>
@@ -48,7 +48,7 @@
           <div id="success"></div>
           <div class="row">
             <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-success btn-lg">Send</button>
+              <button type="submit" class="btn btn-success btn-lg">메일 보내기</button>
             </div>
           </div>
         </form>
