--- a/_includes/about.html
+++ b/_includes/about.html
@@ -28,9 +28,11 @@
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2 text-right">
+        <p><strong>스타트업 6개월 근무</strong></p>
         <p><strong>경일게임아카데미</strong></p>
       </div>
       <div class="col-lg-4 text-left">
+        <p>💼 SI 개발 프론트</p>
         <p>🏁 블록체인 10개월 과정 수료</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
