--- a/_includes/about.html
+++ b/_includes/about.html
@@ -36,7 +36,7 @@
         <p>🏁 블록체인 10개월 과정 수료</p>
       </div>
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
+        <a href="https://drive.google.com/file/d/19kOa2XadrlmjmZqXzPsf7Y8q-3zwTBQn/view?usp=sharing" class="btn btn-lg btn-outline">
           <i class="fa fa-download"></i> 이력서 다운로드
         </a>
       </div>
