--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -25,17 +25,17 @@
             {% endif %}
             {% if post.githubLink %}
             <a href="{{ post.githubLink }}" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i> github
+              <i class="fa-brands fa-github"></i> github
             </a>
             {% endif %}
             {% if post.FrontLink %}
             <a href="{{ post.FrontLink }}" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i> Front-github
+              <i class="fa-brands fa-github"></i> Front-github
             </a>
             {% endif %}
             {% if post.BackLink %}
             <a href="{{ post.BackLink }}" class="btn btn-lg btn-outline">
-              <i class="fa fa-download"></i> Back-github
+              <i class="fa-brands fa-github"></i> Back-github
             </a>
             {% endif %}
             {% if post.description %}
