--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -24,17 +24,17 @@
             <img src="img/portDetail/{{ post.img }}.png" class="img-responsive img-centered" alt="{{ post.alt }}">
             {% endif %}
             {% if post.githubLink %}
-            <a href="{{ post.githubLink }}" class="btn btn-lg btn-outline">
+            <a href="{{ post.githubLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-lg btn-outline">
               <i class="fa-brands fa-github"></i> github
             </a>
             {% endif %}
             {% if post.FrontLink %}
-            <a href="{{ post.FrontLink }}" class="btn btn-lg btn-outline">
+            <a href="{{ post.FrontLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-lg btn-outline">
               <i class="fa-brands fa-github"></i> Front-github
             </a>
             {% endif %}
             {% if post.BackLink %}
-            <a href="{{ post.BackLink }}" class="btn btn-lg btn-outline">
+            <a href="{{ post.BackLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-lg btn-outline">
               <i class="fa-brands fa-github"></i> Back-github
             </a>
             {% endif %}
