--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -356,6 +356,7 @@ section.success {
 .stack-explain > p {
     margin-left: 5px;
     padding: 3px 2px 2px 3px;
+    font-size: 15px;
 }
 
 form .row:first-child .floating-label-form-group {
