--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -368,6 +368,10 @@ section.success {
     display: flex;
 }
 
+.useStack {
+    text-align: left;
+}
+
 form .row:first-child .floating-label-form-group {
     border-top: 1px solid #eee;
 }
