--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -44,7 +44,7 @@
             </div>
             {% endif %}
             {% if post.useStack %}
-            <p>{{ post.useStack }}</p>
+            <p class="useStack">{{ post.useStack }}</p>
             {% endif %}
             {% if post.description %}
             <p>{{ post.description }}</p>
