--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -47,7 +47,7 @@
             {{ post.useStack }}
             {% endif %}
             {% if post.description %}
-            <p>{{ post.description }}</p>
+            <p class="description">{{ post.description }}</p>
             {% endif %}
             <ul class="list-inline item-details">
               {% if post.title %}
