--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -381,6 +381,10 @@ section.success {
     font-size: 17px;
 }
 
+.description {
+    text-align: left;
+}
+
 form .row:first-child .floating-label-form-group {
     border-top: 1px solid #eee;
 }
