--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -449,8 +449,12 @@ footer .footer-below {
     outline: 0;
 }
 
+.modal-container-wrap {
+    display: flex;
+}
+
 .portfolio-modal .modal-content {
-    padding: 100px 0;
+    padding: 20px 0;
     min-height: 100%;
     border: 0;
     border-radius: 0;
