--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -33,7 +33,7 @@
           {% endif %}
           {% if post.stacks %}
           <div style="margin: 20px 0 20px 0">
-            사용된 기술: <strong>{{ post.stacks }}</strong>
+            이 프로젝트에서 내가 맡은 부분 : <strong>{{ post.stacks }}</strong>
           </div>
           {% endif %}
         </div>
