--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -16,21 +16,6 @@
           {% else %}
           <img src="img/portDetail/{{ post.img }}.png" class="img-responsive img-centered" alt="{{ post.alt }}">
           {% endif %}
-          {% if post.githubLink %}
-          <a href="{{ post.githubLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
-            <i class="fa-brands fa-github"></i> github
-          </a>
-          {% endif %}
-          {% if post.FrontLink %}
-          <a href="{{ post.FrontLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
-            <i class="fa-brands fa-github"></i> Front-github
-          </a>
-          {% endif %}
-          {% if post.BackLink %}
-          <a href="{{ post.BackLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
-            <i class="fa-brands fa-github"></i> Back-github
-          </a>
-          {% endif %}
           {% if post.stacks %}
           <div style="margin: 20px 0 20px 0">
             이 프로젝트에서 내가 맡은 부분 : <strong>{{ post.stacks }}</strong>
@@ -63,9 +48,23 @@
           </ul>
         </div>
       </div>
-      <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i>
+      {% if post.githubLink %}
+      <a href="{{ post.githubLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+        <i class="fa-brands fa-github"></i> github
+      </a>
+      {% endif %}
+      {% if post.FrontLink %}
+      <a href="{{ post.FrontLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+        <i class="fa-brands fa-github"></i> Front-github
+      </a>
+      {% endif %}
+      {% if post.BackLink %}
+      <a href="{{ post.BackLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+        <i class="fa-brands fa-github"></i> Back-github
+      </a>
+      {% endif %}
+      <button type="button" class="btn btn-default" data-dismiss="modal">
         Close</button>
-    </div>
     </div>
   </div>
 </div>
