--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -49,17 +49,17 @@
         </div>
       </div>
       {% if post.githubLink %}
-      <a href="{{ post.githubLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+      <a href="{{ post.githubLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-outline">
         <i class="fa-brands fa-github"></i> github
       </a>
       {% endif %}
       {% if post.FrontLink %}
-      <a href="{{ post.FrontLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+      <a href="{{ post.FrontLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-outline">
         <i class="fa-brands fa-github"></i> Front-github
       </a>
       {% endif %}
       {% if post.BackLink %}
-      <a href="{{ post.BackLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-lg btn-outline">
+      <a href="{{ post.BackLink }}" style="background-color: #95a5a6; color: white;" class="btn btn-default btn-outline">
         <i class="fa-brands fa-github"></i> Back-github
       </a>
       {% endif %}
