--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -376,6 +376,10 @@ section.success {
     border-bottom: #0f7864 1px solid;
 }
 
+.projectStack strong {
+    border-bottom: #0f7864 1px solid;
+}
+
 .stackDesc {
     padding-left: 5px;
     font-size: 17px;
