--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -66,7 +66,7 @@
         <i class="fa-brands fa-github"></i> Back-github
       </a>
       {% endif %}
-      <button type="button" class="btn btn-default" data-dismiss="modal">
+      <button type="button" class="btn btn-default" style="margin: 15px 0 0 10px" data-dismiss="modal">
         Close</button>
     </div>
   </div>
