--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -25,6 +25,8 @@
           </div>
           {% endif %}
         </div>
+        <div class="emptySpace">
+        </div>
         <div class="right-container">
           {% if post.useStack %}
           {{ post.useStack }}
