--- a/_includes/modals.html
+++ b/_includes/modals.html
@@ -41,7 +41,7 @@
             </li>
             {% endif %}
             {% if post.project-date %}
-            <li>Date:
+            <li>Period:
               <strong>{{ post.project-date }}</strong>
             </li>
             {% endif %}
