--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,10 @@
   {% include portfolio_grid.html %}
   {% include about.html %}
 
-  <!-- {% if site.contact == "static" %}
+  {% if site.contact == "static" %}
   {% include contact_static.html %}
   {% elsif site.contact == "disqus" %}
-  {% include contact_disqus.html %} -->
+  {% include contact_disqus.html %}
 
   {% include footer.html %}
   {% include modals.html %}
