--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,13 +9,13 @@
   {% include about.html %}
 
   {% if site.contact == "static" %}
-  {% include contact_static.html %}
+    {% include contact_static.html %}
   {% elsif site.contact == "disqus" %}
-  {% include contact_disqus.html %}
+    {% include contact_disqus.html %}
+  {% endif %}
 
   {% include footer.html %}
   {% include modals.html %}
   {% include js.html %}
 </body>
-
 </html>
