fix: 이력서 다운로드 링크 변경

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -108,7 +108,7 @@
     </div>
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 text-center">
-        <a href="https://drive.google.com/file/d/1QnoAe2K5hlEMrADs69d0SSN8NWcYFDwy/view?usp=share_link" class="btn btn-lg btn-outline">
+        <a href="https://drive.google.com/file/d/1gzFwCAAn94MtHJYYxik0q4KoktRGyoNo/view" class="btn btn-lg btn-outline">
           <i class="fa fa-download"></i> 이력서 다운로드
         </a>
       </div>
